# ebw

./: .gitmodules  Cargo.toml  README.md
docs/: guidelines_and_project_flow.md  ui-implementation-plan.md
docs/exliar-vfio/: README.md  architecture.md  gpu-compatibility.md  index.html  plugin-system.md
src/: lib.rs  main.rs
src/core/: bootloader.rs  mod.rs  state.rs  system.rs  vfio.rs
src/core/bootloader/: grub.rs  kernelstub.rs  mod.rs  systemd_boot.rs
src/gpu/: detection.rs  mod.rs
src/plugin/: mod.rs
src/ui/: colors.rs  mod.rs  screen.rs  terminal.rs
src/ui/components/: border.rs  list.rs  mod.rs  panel.rs
src/ui/tui/: app.rs  input.rs  mod.rs  render.rs  state.rs
src/utils/: mod.rs
