[package]
name = "exliar-vfio"
version = "0.1.0"
edition = "2021"
authors = ["Exliar Team"]
description = "A modular, extensible system for automating VFIO GPU passthrough and VM management"

[dependencies]
# Terminal control and handling
crossterm = "0.27.0"
unicode-width = "0.1.10"
ratatui = "0.24.0"
chrono = "0.4.31"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
